// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCodeBlock should render correctly 1`] = `
<pre
  className="bpk-code__pre"
>
  <code
    className="bpk-code bpk-code--block"
  >
    npm install react --save-dev
  </code>
</pre>
`;

exports[`BpkCodeBlock should render correctly with "alternate" 1`] = `
<pre
  className="bpk-code__pre bpk-code__pre--alternate"
>
  <code
    className="bpk-code bpk-code--block"
  >
    npm install react --save-dev
  </code>
</pre>
`;

exports[`BpkCodeBlock should render correctly with custom "className" 1`] = `
<pre
  className="bpk-code__pre my-custom-class"
>
  <code
    className="bpk-code bpk-code--block"
  >
    npm install react --save-dev
  </code>
</pre>
`;
